templates/k8slivenessprobe_template.yaml
apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: k8slivenessprobe
spec:
  crd:
    spec:
      names:
        kind: K8sLivenessProbe
        listKind: K8sLivenessProbeList
        plural: k8slivenessprobe
        singular: k8slivenessprobe
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8slivenessprobe

        deny[{"msg": msg}] {
            input.request.kind.kind = "Deployment"
            input.request.operation = "CREATE"
            servicetype = input.request.kind.kind
            name = input.request.object.metadata.name
            containers := input.request.object.spec.template.spec.containers[_]
            not containers.livenessProbe
            msg = sprintf("Rejecting \"%v/%v\" for not specifying a livenessProbe", [servicetype, name])
        }
